--- a/index.css
+++ b/index.css
@@ -9,7 +9,6 @@
 }
 
 .display-3{
-    line-height: 0.7;
     transition: all 0.3s;
 }
 
@@ -22,7 +21,6 @@
 }
 
 #result{
-    color: white;
     font-size: 2rem;
     font-weight: 300;
     background-color: transparent;
@@ -34,5 +32,7 @@
 }
 
 #bar{
+    font-size: 2rem;
+    color: white;
     background-color: darkslategray;
 }
